# AMO

./: .gitignore  Dockerfile.server  Dockerfile.web  LICENSE  README.md
deploy/monitoring/: amo_gcp_dashboard.yaml
deploy/neo4j/: amo-neo4j-gke.yaml  pocket-lover-neo4j.yaml
deploy/server/: k8s.yaml
deploy/web/: k8s.yaml
scripts/gcp/: migrate_pg_to_cloudsql.py
scripts/graph_cleanup/: __init__.py  cleanup_and_rebuild.py  lib.py  rules.json
scripts/import/: backfill_56_69.py  backfill_techniques.py  batch_251_500_summary.json  batch_import_1001_1261.py  batch_import_1001_1261.sh  batch_import_251_500.py  batch_import_251_500.sh  batch_import_501_1000.py  batch_import_501_1000.sh  chapter_years_fix.json  extract_lore_rules.py  fix_chapter_years.py  fix_master_timeline_data.py  generate_all_time_windows.py  generate_time_windows_llm.py  migrate_unique_constraints.sql  regenerate_time_windows.py  run_all_remaining.sh  run_import.py  time_windows_1001_1100.json  time_windows_1001_1261.sql  (+8 more)
server/: .env.example  Dockerfile  main.py  pyproject.toml
server/app/: main.py
server/app/api/: auth.py  billing.py  characters.py  chat.py  entities.py  graph.py  lore.py  search.py  site.py  stats.py  storyplay.py  timeline.py
server/app/core/: config.py
server/app/db/: connections.py
server/app/models/: tables.py
server/app/schemas/: responses.py
server/app/services/: auth.py  billing.py  embeddings.py  lore_guard.py
server/tests/: test_auth.py  test_billing.py  test_chat.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/app/: page.tsx  (+2 more)
(+35 files in other folders)
