[project]
name = "amo-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "neo4j>=6.1.0",
    "pydantic-settings>=2.13.1",
    "pymilvus>=2.6.10",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.48",
    "sse-starlette>=3.3.3",
    "uvicorn[standard]>=0.42.0",
]
